--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@barba/core": "^2.9.7",
     "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.16",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.0.2"
   }
